# fastdns

./: CMakeLists.txt  ConfigParse.cpp  ConfigParse.h  PortConfig.cpp  PortConfig.h  PortResource.cpp  PortResource.h  cache.h  config.yaml  config_parse.cpp  config_parse.h  dnsserver.cpp  launch.sh  port_config.cpp  port_config.h
test/: CMakeLists.txt  ConfigParse-test.cpp  config-parse-test.cpp
